# ml-platform-monorepo

./: QUICK_REFERENCE.md  README.md  argocd.tf  main.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
.github/workflows/: README.md  build-and-push-ecr.yml  build-and-release.yml  build-inference-gitops.yml  gitops-validate.yaml  source-code-build-ecr.yml  source-code-build-inference.yml  terraform-apply.yml
components/inference/: Dockerfile
ml-gitops/: .gitignore  CODEOWNERS  CONTRIBUTING.md  IMPROVEMENTS.md  QUICK_START.md  README.md  SECURITY.md
ml-gitops/argocd-root/: root-application.yaml
ml-gitops/bootstrap/: kustomization.yaml
ml-gitops/docs/: ARGOCD_SYNC_TEST.md  SYNC_MONITOR.md  (+6 more)
ml-infra-live/: .gitignore  outputs.tf
ml-source-code/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
ml-source-code/.github/workflows/: build-inference-gitops.yml
ml-source-code/components/data_eda/: Dockerfile  config.yaml  requirements.txt
ml-source-code/components/data_ingestion/: Dockerfile  config.yaml  requirements.txt
ml-source-code/components/data_ingestion/src/: main.py
ml-source-code/components/data_processing/: .dockerignore  config.yaml  requirements.txt
ml-source-code/components/data_processing/src/: main.py
ml-source-code/components/inference/: Dockerfile  config.yaml  requirements.txt
ml-source-code/components/inference/src/: main.py
ml-source-code/components/train/: Dockerfile  config.yaml  requirements.txt
ml-source-code/config/: README.md  aws.schema.json
ml-source-code/docs/workflows/: build-and-push-ecr.md
(+40 files in other folders)
